Remove empty lines

--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,6 @@ __pycache__/
 
 sofaro/media/
 
-
+148461-volna-poberezhe-voda-biryuza-chirok-550x310.jpg
+169652-plyazh-more-okean-priroda-voda-550x310.jpg
+download.jpg
